scroll fix on mobile - attempt 1

--- a/styles/style.css
+++ b/styles/style.css
@@ -82,10 +82,13 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow: hidden;
+}
+
 html,
 body {
     margin: 0;
-    height: 100%;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     width: 100% !important;
